# cloud_storage_clean

./: .env.example  .gitignore  INTEGRATION_TESTING.md  Makefile  QUICKSTART.md  README.md  TESTING_SUMMARY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: CONTRIB.md  ENVIRONMENT.md  RUNBOOK.md
src/cloud_storage_clean/: __init__.py  __main__.py  cli.py  config.py  deleter.py  models.py  scanner.py
src/cloud_storage_clean/providers/: __init__.py  aliyun.py  base.py  tencent.py
src/cloud_storage_clean/utils/: logging.py  rate_limiter.py  validators.py
tests/: conftest.py
tests/integration/: README.md  test_aliyun_provider.py  test_scanner_integration.py  test_tencent_provider.py
tests/unit/: test_deleter.py  test_models.py  test_rate_limiter.py  test_scanner.py  test_validators.py
