[tool.poetry]
name = "cloud-storage-clean"
version = "0.1.0"
description = "CLI tool to safely delete files from Tencent COS and Aliyun OSS"
authors = ["Raphael"]
readme = "README.md"
packages = [{include = "cloud_storage_clean", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.21.0"
rich = "^13.7.0"
structlog = "^24.1.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
PyYAML = "^6.0.1"
cos-python-sdk-v5 = "^1.9.30"
oss2 = "^2.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
cloud-storage-clean = "cloud_storage_clean.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/cloud_storage_clean --cov-report=term-missing"
